v.1 ; there is still bug on mobile navbar

--- a/style.css
+++ b/style.css
@@ -229,6 +229,63 @@
 }
 
 
+/* building.html */
+
+.text-building {
+    font-weight: bold;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 4.5vh;
+    color: #32353C;
+}
+
+.row-img-building {
+    margin-top: 2vh;
+}
+
+.img-building {
+    border-radius: 5px;
+}
+
+.building-name {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 3vh;
+    color: #32353C;
+}
+
+.building-description {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2vh;
+    color: #7d7d7d;
+}
+
+/* aboutus.html */
+
+.institution-name {
+    margin-top: 8vh ;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    color: #32353C;
+}
+
+.institution-description {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    color: #7d7d7d;
+}
+
+
 
 
 /* mobile */
@@ -281,4 +338,44 @@
         color: #FFFFFF;
         margin-top: 8vh;
     }
+
+    .text-building {
+        margin-bottom: 25px;
+        padding-top: 25px;
+        font-size: 24px;
+      }
+
+      .building-name {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        color: #32353C;
+    }
+    
+    .building-description {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 10px;
+        color: #7d7d7d;
+    }
+
+    .institution-name {
+        margin-top: 8vh ;
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        color: #32353C;
+    }
+    
+    .institution-description {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        color: #7d7d7d;
+    }
+    
   }
